# arabic-menu-extractor

./: .gitignore  .impeccable.md  README.md  pyproject.toml  test_steps.md
docker/: docker-compose.yml
docker/env/: .env.postgres.example
frontend/: package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatBox.css  ChatBox.jsx  DataDisplay.css  DataDisplay.jsx  MenuUploader.css  MenuUploader.jsx  ThemeToggle.css  ThemeToggle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: ChatPage.css  ChatPage.jsx  UploadPage.css  UploadPage.jsx
frontend/src/styles/: global.css  theme.css
notebooks/: arabic-menu-ocr-finetuning-llama-factory-qwen.ipynb
notebooks/build_format_dataset/: build_dataset_gemini.ipynb  build_dataset_groq_multiple_keys.ipynb  format_finetuining_dataset_LlamaFactory.ipynb
notebooks/test_free_cloud_providers_ground_truth/: scraping.ipynb  test_gemini_api_ocr_arabic.ipynb  test_groq_llama_4_scout_17b_aracbic_ocr.ipynb
notebooks/test_kaggle_ngrok/: kaggle-gpu-backend-for-local-api.ipynb
src/: .env.example  main.py  requirements.txt
src/agents/: __init__.py  agent_runner.py  chat_service.py  menu_chat_agent.py  session_manager.py  tools.py
src/agents/prompts/: __init__.py  menu_chat.py
src/controllers/: chat_controller.py  menu_controller.py
src/helpers/: config.py
src/models/: database.py  schemas.py
src/routes/: chat_routes.py  menu_routes.py
src/services/: embedding_service.py  ocr_service.py  vector_store_service.py
src/utils/: common.py
